welcome.lessons.welcome.array.search.AverageValue.scala.error
averageValue:6: error: Int.type does not take parameters
  return Int(somme/nums.length)
            ^