welcome.lessons.welcome.array.search.AverageValue.scala.code
def averageValue(nums:Array[Int]): Int = {
  var somme=0
  for (i <- 0 to nums.length){
    somme=somme+nums(i)
  }
  return Int(somme/nums.length)
}